force-app/main/default/objects/Schedule_Z__c/Schedule_Z__c.object-meta.xml
<CustomObject>
    <label>Allocation Schedule</label>
    <nameField>
        
        <label>Allocation Schedule Name</label>
        
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Allocation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>