force-app/main/default/objects/Schedule_Z__c/fields/Applied_to_Production_Starting__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Production_Starting__c</fullName>
    <inlineHelpText>Manual entry provided by utility. It is the start of the production period to which the Allocation Schedule is applied</inlineHelpText>
    <label>Applied to Production Starting</label>
    <type>Date</type>
</CustomField>