force-app/main/default/objects/Schedule_Z__c/fields/Conga_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID__c</fullName>
    <description>This is used in the conga composer to determine which template is used.</description>
    <formula>IF(

ISPICKVAL(Shared_Solar_System__r.Product__r.Program__c,&quot;SMART - Community Solar&quot;),&quot;a2F0a000000OHZeEAO&quot;,

CASE(Utility__c,
&quot;Consolidated Edison&quot;, &quot;a2F5b000001WPDVEA4&quot;,
&quot;Eversource (East)&quot;,&quot;a2F0a000001RC7W,a2F0a000000OaV5EAK&quot;,
&quot;Eversource (West)&quot;,&quot;a2F0a000001RC7W,a2F0a000000OaV5EAK&quot;,
&quot;National Grid (MA)&quot;,&quot;a2F0a000001RBod,a2F0a000000OaVAEA0&quot;,
&quot;NYS Electric and Gas&quot;,&quot;a2F0a000000OY5fEAG&quot;,
&quot;Orange and Rockland&quot;,&quot;a2F0a000000OYv9EAG&quot;,
&quot;National Grid (NY)&quot;,
    IF(Shared_Solar_System__r.UCB__c,&quot;a2F5b000001WAtTEAW&quot;,&quot;a2F0a000000OYzBEAW,a2F0a000000OYzGEAW&quot;),
&quot;Central Hudson Gas and Electric&quot;, &quot;a2F0a000000Ob66EAC&quot;,
&quot;&quot;
)
)</formula>
    <inlineHelpText>This is used in the conga composer to determine which template is used.</inlineHelpText>
    <label>Conga Template ID</label>
    <type>Text</type>
</CustomField>