force-app/main/default/objects/Schedule_Z__c/fields/Contract_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Assignment_Date__c</fullName>
    <inlineHelpText>Date that contracts were legally assigned to the project entity after a Allocation Schedule submission.</inlineHelpText>
    <label>Contract Assignment Date</label>
    <type>Date</type>
</CustomField>