force-app/main/default/objects/Schedule_Z__c/fields/Date_Billing__c.field-meta.xml
<CustomField>
    <fullName>Date_Billing__c</fullName>
    <label>Date Billing</label>
    <type>Date</type>
</CustomField>