force-app/main/default/objects/Schedule_Z__c/fields/Date_Done_Billing__c.field-meta.xml
<CustomField>
    <fullName>Date_Done_Billing__c</fullName>
    <label>Date Done Billing</label>
    <type>Date</type>
</CustomField>