force-app/main/default/objects/Schedule_Z__c/fields/Date_Enacted_by_Utility__c.field-meta.xml
<CustomField>
    <fullName>Date_Enacted_by_Utility__c</fullName>
    <inlineHelpText>Stamped by status change</inlineHelpText>
    <label>Date Enacted by Utility</label>
    <type>Date</type>
</CustomField>