force-app/main/default/objects/Schedule_Z__c/fields/Date_Executed_by_Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Date_Executed_by_Asset_Owner__c</fullName>
    <inlineHelpText>Stamped by status change</inlineHelpText>
    <label>Date Executed by Asset Owner</label>
    <type>Date</type>
</CustomField>