force-app/main/default/objects/Schedule_Z__c/fields/Date_QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_QC_Complete__c</fullName>
    <inlineHelpText>Stamped by the status change</inlineHelpText>
    <label>Date QC Complete</label>
    <type>Date</type>
</CustomField>