force-app/main/default/objects/Schedule_Z__c/fields/Date_Rejected_by_Utility__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_by_Utility__c</fullName>
    <inlineHelpText>Stamped by status Change</inlineHelpText>
    <label>Date Rejected by Utility</label>
    <type>Date</type>
</CustomField>