force-app/main/default/objects/Schedule_Z__c/fields/Date_Replaced_with_Newly_Enacted_Sch_Z__c.field-meta.xml
<CustomField>
    <fullName>Date_Replaced_with_Newly_Enacted_Sch_Z__c</fullName>
    <inlineHelpText>Stamped by status change</inlineHelpText>
    <label>Date Replaced with Newly Enacted AL Sch</label>
    <type>Date</type>
</CustomField>