force-app/main/default/objects/Schedule_Z__c/fields/Date_Schedule_Z_Retired_by_Utility__c.field-meta.xml
<CustomField>
    <fullName>Date_Schedule_Z_Retired_by_Utility__c</fullName>
    <inlineHelpText>Populated by status change of next Allocation Schedule enacted</inlineHelpText>
    <label>Date Allocation Sch Retired by Utility</label>
    <type>Date</type>
</CustomField>