force-app/main/default/objects/Schedule_Z__c/fields/Date_Submitted_to_Utility__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_Utility__c</fullName>
    <inlineHelpText>Stamped by status change</inlineHelpText>
    <label>Date Submitted to Utility</label>
    <type>Date</type>
</CustomField>