force-app/main/default/objects/Schedule_Z__c/fields/Days_to_QC__c.field-meta.xml
<CustomField>
    <fullName>Days_to_QC__c</fullName>
    <description>This field calculated the number of business days between the QC start date field and the Date QC Complete Field.</description>
    <formula>CASE(MOD( QC_Start_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD(  Date_QC_Complete__c  - QC_Start_Date__c  ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Date_QC_Complete__c - QC_Start_Date__c  ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Date_QC_Complete__c - QC_Start_Date__c )/7)*5)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculated the number of business days between the QC start date field and the Date QC Complete Field.</inlineHelpText>
    <label>Days to QC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>