force-app/main/default/objects/Schedule_Z__c/fields/Next_Schedule_Z_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Schedule_Z_Date__c</fullName>
    <inlineHelpText>Defaults to 6 months after the date created, can be edited</inlineHelpText>
    <label>Next Allocation Schedule Date</label>
    <type>Date</type>
</CustomField>