force-app/main/default/objects/Schedule_Z__c/fields/Number_of_Days_to_Enact_ALS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Enact_ALS__c</fullName>
    <formula>Date_Enacted_by_Utility__c-Date_Submitted_to_Utility__c</formula>
    <inlineHelpText>Calculates the number of days from day submitted to day enacted.</inlineHelpText>
    <label>Number of Days to Enact ALS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>