force-app/main/default/objects/Schedule_Z__c/fields/QC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Start_Date__c</fullName>
    <description>This is set by a process builder when the Status is set to new.</description>
    <inlineHelpText>This is set by a process builder when the Status is set to new.</inlineHelpText>
    <label>QC Start Date</label>
    <type>Date</type>
</CustomField>