force-app/main/default/objects/Schedule_Z__c/fields/Schedule_Z_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z_Id__c</fullName>
    <label>Allocation Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>