force-app/main/default/objects/Schedule_Z__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Must be updated via the &quot;Update Status &amp; Date&quot; button</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QC in Process</fullName>
                <default>true</default>
                <label>QC in Process</label>
            </value>
            <value>
                <fullName>QC Complete</fullName>
            </value>
            <value>
                <fullName>Rejected Internal</fullName>
            </value>
            <value>
                <fullName>Submitted to Asset Owner</fullName>
            </value>
            <value>
                <fullName>Executed by Asset Owner</fullName>
            </value>
            <value>
                <fullName>Submitted to Utility</fullName>
            </value>
            <value>
                <fullName>Rejected by Utility</fullName>
            </value>
            <value>
                <fullName>Enacted by Utility</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Executed by Asset Owner (old version)</fullName>
                <isActive>false</isActive>
                <label>Executed by Asset Owner &gt;&gt;&gt; Submit to Utility</label>
            </value>
            <value>
                <fullName>Front Page QC Completed &gt;&gt;&gt; Submit to Asset Owner</fullName>
                <isActive>false</isActive>
                <label>Front Page QC Completed &gt;&gt;&gt; Submit to Asset Owner</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New &gt;&gt;&gt; Complete Subscription QC</label>
            </value>
            <value>
                <fullName>Rejected by Utility (old version)</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Replaced with newly Enacted Schedule Z</fullName>
                <isActive>false</isActive>
                <label>Replaced with newly Enacted Schedule Z</label>
            </value>
            <value>
                <fullName>Submitted to Asset Owner &gt;&gt;&gt; Contact Asset Owner to get it Executed</fullName>
                <isActive>false</isActive>
                <label>Submitted to Asset Owner &gt;&gt;&gt; Contact Asset Owner to get it Executed</label>
            </value>
            <value>
                <fullName>Submitted to Utility (old version)</fullName>
                <isActive>false</isActive>
                <label>Submitted to Utility &gt;&gt;&gt; Contact Utility to get it Enacted</label>
            </value>
            <value>
                <fullName>QC Complete (old version)</fullName>
                <isActive>false</isActive>
                <label>Subscription QC Completed &gt;&gt;&gt; Complete Front Page QC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>