force-app/main/default/objects/Schedule_Z__c/fields/Submitted_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Utilization__c</fullName>
    <description>Roll up summary of the % field on Allocation Schedule Subscriptions.</description>
    <label>Submitted Utilization</label>
    <summarizedField>Schedule_Z_Subscription__c.Percent_Share__c</summarizedField>
    <summaryForeignKey>Schedule_Z_Subscription__c.Schedule_Z__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>