force-app/main/default/objects/Schedule_Z__c/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <inlineHelpText>Total number of subscriptions on Allocation Schedule</inlineHelpText>
    <label>Subscriptions</label>
    <summaryForeignKey>Schedule_Z_Subscription__c.Schedule_Z__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>