force-app/main/default/objects/Schedule_Z__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <formula>Shared_Solar_System__r.Utility__r.Name</formula>
    <label>Utility</label>
    <type>Text</type>
</CustomField>