force-app/main/default/objects/Schedule_Z__c/validationRules/Ready_only_For_Schedule_Z.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_only_For_Schedule_Z</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Schedule_Z_Id__c) , Schedule_Z_Id__c != NULL)</errorConditionFormula>
    <errorMessage>Cannot Change Schedule Z Id</errorMessage>
</ValidationRule>