force-app/main/default/objects/Schedule_Z__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Submitted_to_Utility__c</columns>
    <columns>Date_Enacted_by_Utility__c</columns>
    <columns>QC_Start_Date__c</columns>
    <columns>Date_QC_Complete__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>